[gd_scene load_steps=13 format=3 uid="uid://pys5dvb2pbwr"]

[ext_resource type="Script" path="res://core/battle/scenes/dev_battle.gd" id="1_ggitd"]
[ext_resource type="TileSet" uid="uid://c1fwu87t5u48w" path="res://assets/tilesets/marble-board.tres" id="1_gq3mm"]
[ext_resource type="Script" path="res://core/battle/board/board.gd" id="2_xfa8u"]
[ext_resource type="Script" path="res://core/battle/battle_camera.gd" id="3_60x1o"]
[ext_resource type="Resource" uid="uid://cquvv6kgn37iy" path="res://data/actor_data/valaris.tres" id="3_ox02t"]
[ext_resource type="PackedScene" uid="uid://cg0fkw61fjot3" path="res://core/battle/chess_piece/chess_piece.tscn" id="5_r66iy"]
[ext_resource type="Script" path="res://core/battle/UI/left_panel.gd" id="7_03u1c"]
[ext_resource type="Script" path="res://core/battle/UI/debug/square_info_debug.gd" id="8_fhe4y"]

[sub_resource type="Gradient" id="Gradient_ylsv0"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_5oxf2"]
gradient = SubResource("Gradient_ylsv0")
width = 160
height = 160
use_hdr = true
fill = 1
fill_from = Vector2(0.5, 0.5)
fill_to = Vector2(0.844037, 0.119266)
repeat = 2

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_cf8kh"]
size = Vector2(60, 60)

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_pvraw"]

[node name="DevBattle" type="Node2D"]
script = ExtResource("1_ggitd")
metadata/_edit_vertical_guides_ = [-687.0]
metadata/_edit_horizontal_guides_ = [56.0]

[node name="Board" type="TileMap" parent="."]
unique_name_in_owner = true
tile_set = ExtResource("1_gq3mm")
format = 2
script = ExtResource("2_xfa8u")
board_height = 18
block_chance = 0.1

[node name="SquareIndicator" type="Sprite2D" parent="."]
unique_name_in_owner = true
visible = false
modulate = Color(0, 1, 0, 1)
texture = SubResource("GradientTexture2D_5oxf2")
region_enabled = true
region_rect = Rect2(0, 0, 160, 160)

[node name="BattleCamera" type="Camera2D" parent="."]
position = Vector2(464, 806)
enabled = false
zoom = Vector2(0.3, 0.3)
script = ExtResource("3_60x1o")

[node name="PlayerPieces" type="Node2D" parent="."]

[node name="ChessPiece" parent="PlayerPieces" instance=ExtResource("5_r66iy")]
actor_data = ExtResource("3_ox02t")

[node name="EnemyPieces" type="Node2D" parent="."]

[node name="UI" type="CanvasLayer" parent="."]

[node name="LeftPanel" type="Panel" parent="UI"]
unique_name_in_owner = true
anchors_preset = 9
anchor_bottom = 1.0
offset_right = 188.0
offset_bottom = -133.0
grow_vertical = 2
script = ExtResource("7_03u1c")

[node name="VBoxContainer2" type="VBoxContainer" parent="UI/LeftPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PlayerRoster" type="VBoxContainer" parent="UI/LeftPanel/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="UI/LeftPanel/VBoxContainer2/PlayerRoster"]
layout_mode = 2
text = "Player"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="UI/LeftPanel/VBoxContainer2/PlayerRoster"]
layout_mode = 2
size_flags_horizontal = 4
columns = 2

[node name="PieceUI" type="Control" parent="UI/LeftPanel/VBoxContainer2/PlayerRoster/GridContainer"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 2

[node name="FocusIndicator" type="ColorRect" parent="UI/LeftPanel/VBoxContainer2/PlayerRoster/GridContainer/PieceUI"]
custom_minimum_size = Vector2(70, 70)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -35.0
offset_right = 35.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 0.0210619, 1)

[node name="MemberImage" type="TextureRect" parent="UI/LeftPanel/VBoxContainer2/PlayerRoster/GridContainer/PieceUI"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource("PlaceholderTexture2D_cf8kh")
stretch_mode = 3

[node name="PieceUI2" type="Control" parent="UI/LeftPanel/VBoxContainer2/PlayerRoster/GridContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(70, 70)
layout_mode = 2

[node name="FocusIndicator" type="ColorRect" parent="UI/LeftPanel/VBoxContainer2/PlayerRoster/GridContainer/PieceUI2"]
auto_translate_mode = 1
visible = false
custom_minimum_size = Vector2(70, 70)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -35.0
offset_right = 35.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 0.0210619, 1)

[node name="MemberImage" type="TextureRect" parent="UI/LeftPanel/VBoxContainer2/PlayerRoster/GridContainer/PieceUI2"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource("PlaceholderTexture2D_cf8kh")
stretch_mode = 3

[node name="PieceUI3" type="Control" parent="UI/LeftPanel/VBoxContainer2/PlayerRoster/GridContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(70, 70)
layout_mode = 2

[node name="FocusIndicator" type="ColorRect" parent="UI/LeftPanel/VBoxContainer2/PlayerRoster/GridContainer/PieceUI3"]
auto_translate_mode = 1
visible = false
custom_minimum_size = Vector2(70, 70)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -35.0
offset_right = 35.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 0.0210619, 1)

[node name="MemberImage" type="TextureRect" parent="UI/LeftPanel/VBoxContainer2/PlayerRoster/GridContainer/PieceUI3"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource("PlaceholderTexture2D_cf8kh")
stretch_mode = 3

[node name="PieceUI4" type="Control" parent="UI/LeftPanel/VBoxContainer2/PlayerRoster/GridContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(70, 70)
layout_mode = 2

[node name="FocusIndicator" type="ColorRect" parent="UI/LeftPanel/VBoxContainer2/PlayerRoster/GridContainer/PieceUI4"]
auto_translate_mode = 1
visible = false
custom_minimum_size = Vector2(70, 70)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -35.0
offset_right = 35.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 0.0210619, 1)

[node name="MemberImage" type="TextureRect" parent="UI/LeftPanel/VBoxContainer2/PlayerRoster/GridContainer/PieceUI4"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource("PlaceholderTexture2D_cf8kh")
stretch_mode = 3

[node name="PieceUI5" type="Control" parent="UI/LeftPanel/VBoxContainer2/PlayerRoster/GridContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(70, 70)
layout_mode = 2

[node name="FocusIndicator" type="ColorRect" parent="UI/LeftPanel/VBoxContainer2/PlayerRoster/GridContainer/PieceUI5"]
auto_translate_mode = 1
visible = false
custom_minimum_size = Vector2(70, 70)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -35.0
offset_right = 35.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 0.0210619, 1)

[node name="MemberImage" type="TextureRect" parent="UI/LeftPanel/VBoxContainer2/PlayerRoster/GridContainer/PieceUI5"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource("PlaceholderTexture2D_cf8kh")
stretch_mode = 3

[node name="PieceUI6" type="Control" parent="UI/LeftPanel/VBoxContainer2/PlayerRoster/GridContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(70, 70)
layout_mode = 2

[node name="FocusIndicator" type="ColorRect" parent="UI/LeftPanel/VBoxContainer2/PlayerRoster/GridContainer/PieceUI6"]
auto_translate_mode = 1
visible = false
custom_minimum_size = Vector2(70, 70)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -35.0
offset_right = 35.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 0.0210619, 1)

[node name="MemberImage" type="TextureRect" parent="UI/LeftPanel/VBoxContainer2/PlayerRoster/GridContainer/PieceUI6"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource("PlaceholderTexture2D_cf8kh")
stretch_mode = 3

[node name="HSeparator" type="HSeparator" parent="UI/LeftPanel/VBoxContainer2"]
layout_mode = 2

[node name="ActorDetails" type="VBoxContainer" parent="UI/LeftPanel/VBoxContainer2"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="UI/LeftPanel/VBoxContainer2/ActorDetails"]
layout_mode = 2
text = "Details"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="UI/LeftPanel/VBoxContainer2/ActorDetails"]
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="UI/LeftPanel/VBoxContainer2/ActorDetails/HBoxContainer"]
layout_mode = 2
text = "Name:"

[node name="ActorName" type="Label" parent="UI/LeftPanel/VBoxContainer2/ActorDetails/HBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
text = "<NAME>"

[node name="HBoxContainer2" type="HBoxContainer" parent="UI/LeftPanel/VBoxContainer2/ActorDetails"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="UI/LeftPanel/VBoxContainer2/ActorDetails/HBoxContainer2"]
auto_translate_mode = 1
layout_mode = 2
text = "Class:"

[node name="ChessClass" type="Label" parent="UI/LeftPanel/VBoxContainer2/ActorDetails/HBoxContainer2"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
text = "<CHESS_CLASS>"

[node name="HBoxContainer3" type="HBoxContainer" parent="UI/LeftPanel/VBoxContainer2/ActorDetails"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 0

[node name="Label" type="Label" parent="UI/LeftPanel/VBoxContainer2/ActorDetails/HBoxContainer3"]
auto_translate_mode = 1
layout_mode = 2
text = "Level:"

[node name="ClassLevel" type="Label" parent="UI/LeftPanel/VBoxContainer2/ActorDetails/HBoxContainer3"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
text = "<CLASS_LEVEL>"

[node name="ProfileImage" type="TextureRect" parent="UI/LeftPanel/VBoxContainer2/ActorDetails"]
unique_name_in_owner = true
custom_minimum_size = Vector2(128, 128)
layout_mode = 2
texture = SubResource("PlaceholderTexture2D_pvraw")
stretch_mode = 5

[node name="RightPanel" type="Panel" parent="UI"]
auto_translate_mode = 1
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -185.0
offset_bottom = -389.0
grow_horizontal = 0
grow_vertical = 2
script = ExtResource("7_03u1c")

[node name="EnemyRoster" type="VBoxContainer" parent="UI/RightPanel"]
auto_translate_mode = 1
layout_mode = 2
offset_right = 188.0
offset_bottom = 245.0
alignment = 1

[node name="Label" type="Label" parent="UI/RightPanel/EnemyRoster"]
auto_translate_mode = 1
layout_mode = 2
text = "Enemy"
horizontal_alignment = 1

[node name="GridContainer" type="GridContainer" parent="UI/RightPanel/EnemyRoster"]
auto_translate_mode = 1
layout_mode = 2
size_flags_horizontal = 4
columns = 2

[node name="PieceUI" type="Control" parent="UI/RightPanel/EnemyRoster/GridContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(70, 70)
layout_mode = 2

[node name="FocusIndicator" type="ColorRect" parent="UI/RightPanel/EnemyRoster/GridContainer/PieceUI"]
auto_translate_mode = 1
custom_minimum_size = Vector2(70, 70)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -35.0
offset_right = 35.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 0.0210619, 1)

[node name="MemberImage" type="TextureRect" parent="UI/RightPanel/EnemyRoster/GridContainer/PieceUI"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource("PlaceholderTexture2D_cf8kh")
stretch_mode = 3

[node name="PieceUI2" type="Control" parent="UI/RightPanel/EnemyRoster/GridContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(70, 70)
layout_mode = 2

[node name="FocusIndicator" type="ColorRect" parent="UI/RightPanel/EnemyRoster/GridContainer/PieceUI2"]
auto_translate_mode = 1
visible = false
custom_minimum_size = Vector2(70, 70)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -35.0
offset_right = 35.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 0.0210619, 1)

[node name="MemberImage" type="TextureRect" parent="UI/RightPanel/EnemyRoster/GridContainer/PieceUI2"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource("PlaceholderTexture2D_cf8kh")
stretch_mode = 3

[node name="PieceUI3" type="Control" parent="UI/RightPanel/EnemyRoster/GridContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(70, 70)
layout_mode = 2

[node name="FocusIndicator" type="ColorRect" parent="UI/RightPanel/EnemyRoster/GridContainer/PieceUI3"]
auto_translate_mode = 1
visible = false
custom_minimum_size = Vector2(70, 70)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -35.0
offset_right = 35.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 0.0210619, 1)

[node name="MemberImage" type="TextureRect" parent="UI/RightPanel/EnemyRoster/GridContainer/PieceUI3"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource("PlaceholderTexture2D_cf8kh")
stretch_mode = 3

[node name="PieceUI4" type="Control" parent="UI/RightPanel/EnemyRoster/GridContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(70, 70)
layout_mode = 2

[node name="FocusIndicator" type="ColorRect" parent="UI/RightPanel/EnemyRoster/GridContainer/PieceUI4"]
auto_translate_mode = 1
visible = false
custom_minimum_size = Vector2(70, 70)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -35.0
offset_right = 35.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 0.0210619, 1)

[node name="MemberImage" type="TextureRect" parent="UI/RightPanel/EnemyRoster/GridContainer/PieceUI4"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource("PlaceholderTexture2D_cf8kh")
stretch_mode = 3

[node name="PieceUI5" type="Control" parent="UI/RightPanel/EnemyRoster/GridContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(70, 70)
layout_mode = 2

[node name="FocusIndicator" type="ColorRect" parent="UI/RightPanel/EnemyRoster/GridContainer/PieceUI5"]
auto_translate_mode = 1
visible = false
custom_minimum_size = Vector2(70, 70)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -35.0
offset_right = 35.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 0.0210619, 1)

[node name="MemberImage" type="TextureRect" parent="UI/RightPanel/EnemyRoster/GridContainer/PieceUI5"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource("PlaceholderTexture2D_cf8kh")
stretch_mode = 3

[node name="PieceUI6" type="Control" parent="UI/RightPanel/EnemyRoster/GridContainer"]
auto_translate_mode = 1
custom_minimum_size = Vector2(70, 70)
layout_mode = 2

[node name="FocusIndicator" type="ColorRect" parent="UI/RightPanel/EnemyRoster/GridContainer/PieceUI6"]
auto_translate_mode = 1
visible = false
custom_minimum_size = Vector2(70, 70)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -35.0
offset_top = -35.0
offset_right = 35.0
offset_bottom = 35.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 1, 0.0210619, 1)

[node name="MemberImage" type="TextureRect" parent="UI/RightPanel/EnemyRoster/GridContainer/PieceUI6"]
auto_translate_mode = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -30.0
offset_top = -30.0
offset_right = 30.0
offset_bottom = 30.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
texture = SubResource("PlaceholderTexture2D_cf8kh")
stretch_mode = 3

[node name="Debug" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="Debug"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="SquareInfoDebug" type="Panel" parent="Debug/Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -230.0
offset_top = -186.0
offset_right = -33.0
offset_bottom = -31.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("8_fhe4y")

[node name="VBoxContainer" type="VBoxContainer" parent="Debug/Control/SquareInfoDebug"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 6.0
offset_right = -6.0
offset_bottom = -12.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Debug/Control/SquareInfoDebug/VBoxContainer"]
layout_mode = 2
text = "Square Info"
horizontal_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="Debug/Control/SquareInfoDebug/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="Debug/Control/SquareInfoDebug/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Square"

[node name="SquareCoords" type="Label" parent="Debug/Control/SquareInfoDebug/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
text = "<SQUARE>"

[node name="HBoxContainer2" type="HBoxContainer" parent="Debug/Control/SquareInfoDebug/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="Label" type="Label" parent="Debug/Control/SquareInfoDebug/VBoxContainer/HBoxContainer2"]
auto_translate_mode = 1
layout_mode = 2
text = "Color"

[node name="SquareColor" type="Label" parent="Debug/Control/SquareInfoDebug/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
text = "<COLOR>"

[node name="HBoxContainer3" type="HBoxContainer" parent="Debug/Control/SquareInfoDebug/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="Label" type="Label" parent="Debug/Control/SquareInfoDebug/VBoxContainer/HBoxContainer3"]
auto_translate_mode = 1
layout_mode = 2
text = "Is Blocked"

[node name="IsBlocked" type="Label" parent="Debug/Control/SquareInfoDebug/VBoxContainer/HBoxContainer3"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
text = "<BLOCKED>"

[node name="HBoxContainer4" type="HBoxContainer" parent="Debug/Control/SquareInfoDebug/VBoxContainer"]
auto_translate_mode = 1
layout_mode = 2

[node name="Label" type="Label" parent="Debug/Control/SquareInfoDebug/VBoxContainer/HBoxContainer4"]
auto_translate_mode = 1
layout_mode = 2
text = "Is Trap"

[node name="IsTrap" type="Label" parent="Debug/Control/SquareInfoDebug/VBoxContainer/HBoxContainer4"]
unique_name_in_owner = true
auto_translate_mode = 1
layout_mode = 2
text = "<TRAP>"
